scroll top feature added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ms-Dhoni</title>
     <link rel="stylesheet" href="src/style.css">
+    <script src="https://kit.fontawesome.com/7aff37343c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -181,6 +182,8 @@
         <p>Designed By : <a href="https://www.linkedin.com/in/shivam-birla-3a2988245?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Shivam Birla.</a></p>
 
       </div>
-    </footer>    
+    </footer>   
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+    <script src="src/script.js"></script>
 </body>
 </html>
